--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "phpoffice/phpspreadsheet": "*"
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "*",
+        "psr/simple-cache": "2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
