--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "*",
-        "psr/simple-cache": "2.0"
+        "psr/simple-cache": "2.0",
+        "weidner/goutte": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
